Phase 0: build on Spark 3.5/Java 17, fix compile errors, add tests and CI
The existing Scala library did not compile and overstated what it did.
This makes it build, behave honestly and have test coverage, as the
starting point for the v2.0 rebuild on current SGX + Gramine
(plan in docs/REBUILD_PLAN.md).

- Build: Spark 3.5.9 (Provided), Scala 2.12.18, sbt 1.12.15,
  sbt-assembly 2.3.1, Java 17 target; drop slf4j-log4j12 and Jackson
  pins that conflict with Spark; fork tests/run with --add-opens.
- Fix compile errors: K-Means used an untyped "dummy" dataset,
  ExtendedSoteriaML missed the data-type imports, secureDataShuffle
  lacked a ClassTag.
- Fix runtime issues: RDD closures captured non-serializable trainer
  instances (helpers moved to companion objects); ALS solver had no
  pivoting; K-Means claimed k-means++ but sampled randomly (now real
  k-means++ with a seed); LR gradient is averaged.
- Honesty: remove "[SOTERIA-SGX] ... in SGX enclave" printlns and the
  isEncrypted flag; zone decisions are logged as not enforced.
- EncryptionUtils: shared SecureRandom, optional AAD, length check.
- Tests: 11 ScalaTest cases (AES-GCM tamper/wrong key/AAD, zones,
  Parquet load, all 8 algorithms, examples end to end).
- CI: GitHub Actions running sbt test on Temurin 17.
- README: rebuild status, roadmap and build instructions.