@@ -1,49 +1,67 @@
 name := "SOTERIA"
 
-version := "1.0.0"
+version := "2.0.0-SNAPSHOT"
 
-scalaVersion := "2.12.15"
+// Spark 3.5.x is published for Scala 2.12 and 2.13; 2.12.18 matches the Spark 3.5 build.
+scalaVersion := "2.12.18"
 
-val sparkVersion = "3.2.0"
+val sparkVersion = "3.5.9"
 
 libraryDependencies ++= Seq(
-  "org.apache.spark" %% "spark-core" % sparkVersion,
-  "org.apache.spark" %% "spark-sql" % sparkVersion,
-  "org.apache.spark" %% "spark-mllib" % sparkVersion,
-  "org.apache.spark" %% "spark-streaming" % sparkVersion,
-  
-  // Logging
-  "org.slf4j" % "slf4j-api" % "1.7.36",
-  "org.slf4j" % "slf4j-log4j12" % "1.7.36",
-  
+  // Spark is supplied by the cluster (or by the Gramine enclave image) at runtime.
+  "org.apache.spark" %% "spark-core" % sparkVersion % Provided,
+  "org.apache.spark" %% "spark-sql" % sparkVersion % Provided,
+  "org.apache.spark" %% "spark-mllib" % sparkVersion % Provided,
+
   // Testing
-  "org.scalatest" %% "scalatest" % "3.2.12" % Test,
-  "org.scalatestplus" %% "mockito-3-4" % "3.2.10.0" % Test,
-  
-  // JSON processing
-  "com.fasterxml.jackson.core" % "jackson-databind" % "2.13.3",
-  "com.fasterxml.jackson.module" %% "jackson-module-scala" % "2.13.3"
+  "org.scalatest" %% "scalatest" % "3.2.19" % Test
 )
+
+// `sbt run` should see the Provided Spark jars.
+Compile / run := Defaults
+  .runTask(Compile / fullClasspath, Compile / run / mainClass, Compile / run / runner)
+  .evaluated
 
 // Assembly plugin settings for creating fat JARs
 assembly / assemblyMergeStrategy := {
-  case PathList("META-INF", xs @ _*) => MergeStrategy.discard
-  case "application.conf" => MergeStrategy.concat
-  case "reference.conf" => MergeStrategy.concat
-  case _ => MergeStrategy.first
+  case PathList("META-INF", "services", _ @_*) => MergeStrategy.concat
+  case PathList("META-INF", _ @_*)             => MergeStrategy.discard
+  case "application.conf"                      => MergeStrategy.concat
+  case "reference.conf"                        => MergeStrategy.concat
+  case _                                       => MergeStrategy.first
 }
 
-// Compiler options
 scalacOptions ++= Seq(
   "-deprecation",
   "-encoding", "UTF-8",
   "-feature",
   "-unchecked",
-  "-Xlint"
+  "-release", "17"
 )
 
-// Java compatibility
-javacOptions ++= Seq("-source", "1.8", "-target", "1.8")
+javacOptions ++= Seq("--release", "17")
 
-// Test settings
+// Spark needs these module openings on Java 17+.
+val sparkJavaOpts = Seq(
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "-Djdk.reflect.useDirectMethodHandle=false"
+)
+
+run / fork := true
+run / javaOptions ++= sparkJavaOpts :+ "-Dspark.master=local[*]"
+
+Test / fork := true
+Test / javaOptions ++= sparkJavaOpts ++ Seq("-Xmx2g")
 Test / parallelExecution := false
